# TeamBrain

./: .env.example  .gitignore  README.md
backend/: .env.example  pyproject.toml  railway.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_pgvector_embeddings.py  003_memory_embedding.py  004_app_grants_audit.py  005_batch2_multi_org.py  006_junction_rls.py  007_device_tokens.py  008_merge_field_reports.py  009_inbox_messages.py  010_tasks_updated_at.py  011_post_008_grants_rls.py  012_task_dependencies.py  013_automation_rules.py  014_module_findings.py  015_invite_short_code.py  016_org_notifications.py  017_message_category.py  018_must_change_password.py
backend/app/: config.py  error_handlers.py  job_dedup.py  main.py  pagination.py  rate_limit.py  scheduler.py  startup.py  trial.py  upload_limits.py
backend/app/agents/: agent_loop.py  assistant.py  core.py  documents_agent.py  embeddings.py  llm_client.py  meeting_extractor.py  meetings_agent.py  memory_service.py  personality.py
backend/app/api/: activity.py  assistant.py  auth.py  automations.py  sync.py  (+21 more)
backend/scripts/: e2e_api_sweep.py  seed_timtimol.py  wipe_all_tenant_data.sql
backend/tests/: conftest.py  sqlite_schema.py  test_agent_loop.py  test_automation.py  test_documents_agent.py  test_health.py  test_invite_code.py  test_meetings_agent.py  test_memory_archive.py  test_memory_service.py  test_module_findings.py  test_password_change.py  test_paydunya.py  test_personality.py  test_policy.py  test_task_dependencies.py  test_transcription.py
(+205 files in other folders)
