[project]
name = "teambrain-backend"
version = "0.1.0"
description = "TeamBrain — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "asyncpg",
    "alembic",
    "pydantic>=2",
    "pydantic-settings",
    "email-validator",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "bcrypt<4.1",
    "httpx",
    "structlog",
    "slowapi",
    "twilio",
    "aioboto3",
    "python-dotenv",
    "python-multipart",
    "pgvector",
    "apscheduler>=3.10",
    "authlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "faker",
    "aiosqlite",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
